src/stylesheets/notebook.scss
$black: #363636;
$blue: #2A64C7;

$bold: 600;

body {
  font-family: 'Helvetica Neue', sans-serif;
  color: $black;
  background: #fff;
  margin: 0;
  padding: 0;
}

a {
  color: $blue;
  text-decoration: none;

  &:hover {
    text-decoration: underline;    
  }
}

div[contenteditable="true"] {
  outline: none;
}

img[data-livebook-placeholder-cell] {
  border-radius: 1em;
}

.livebook-nav {
  background: #fdfdfd;
  box-shadow: 0 1px 2px #ccc;
  height: 70px;
  position: fixed;
  top: 0;
  max-width: 1200px;
  width: 100%;

  transition: all .2s ease-in;
}

.app-container {
  margin: 0 auto;
  max-width: 1200px;
  padding-top: 70px;
}

.notebook {
  margin: 0 auto;
  padding: 0;
  max-width: 1000px;
  width: 100%;
}

.notebook:empty {
  display: none;
}

.notebook-title-show-placeholder {
  position: relative;  
}

.notebook-title-show-placeholder::after {
  color: #888;
  content: "What will you title your notebook?";
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
}

.notebook h1,
.notebook h2,
.notebook h3 {
  font-weight: 700;
  margin: 0;
  padding: 0;
}

.notebook h1 {
  border-bottom: .1em solid rgba(0,0,0,0.125);
  font-size: 2.4em;
  margin-bottom: .4em;
  padding-bottom: .1em;
}

.notebook h2 {
  border-bottom: .07em solid rgba(0,0,0,0.125);
  font-size: 1.9em;
  margin-bottom: .4em;
  padding-bottom: .1em;
}

.notebook h3 {
  font-size: 1.4em;
  margin-bottom: .5em;
  padding-bottom: .15em;
}

.notebook p {
  font-size: 1em;
  line-height: 1.55;
  margin: 0;
  margin-bottom: 1em;
  text-align: justify;
}

.notebook .codewrap {
  border: .1em solid #ddd;
  border-radius: .15em;
  background: #eee;
  color: #222;
  font-size: .85em;
  padding: .8em .85em 1em .8em;
  position: relative;
  margin: 0;
  /*margin-bottom: -.1em;*/
}

.notebook .codewrap::after {
  background: #eee;
  border-bottom: .1em solid #ddd;
  border-right: .1em solid #ddd;
  content: " ";
  height: 18px;
  left: 50%;
  opacity: inherit;
  position: absolute;
  transform: translateX(-50%) rotate(45deg) translateY(7px);
  width: 18px;
}

.notebook .code {
  font-family: Menlo, monospace;
  overflow: hidden;
  white-space: pre;
}

.notebook table {
  background: #fff;
  border-collapse: collapse;
  margin: 0;
  width: 100%;
}

.notebook th,
.notebook td {
  border: .07em solid #ddd;
  text-align: left;
  line-height: 1.55;
}

/* These are magick numbers */
/*.notebook th,
.notebook td {
  display: none;
}
.notebook th:nth-of-type(-n+9),
.notebook td:nth-of-type(-n+8) {
  display: table-cell;
}*/

.notebook th {
  background: #f8f8f8;
  font-size: .85em;
  padding: .55em .9em;
}

.notebook td {
  font-size: 1em;
  padding: .4em .8em;
}

.notebook .cell {
  /*margin-bottom: 1em;*/
  position: relative;
}

.notebook img {
  max-width: 100%;
}

.notebook hr {
  border: 0;
  height: .2em;
  background: #ccc;
}

.pyresult {
  background: #fff;
  border: 1px solid #ccc;
  border-bottom-left-radius: .15em;
  border-bottom-right-radius: .15em;
  font-family: Menlo, monospace;
  font-size: .85em;
  overflow: hidden;
  padding: .8em .85em 1em .85em;
  white-space: pre;
}

.pyresult::before {
  content: "→ ";
  display: inline-block;
  /*margin-top: -1em;  lift it slightly above the x-height... kind of a magick number here, but looks nicer */
}

.pyresult-error {
  background-color: #FC212C;
  background-image: url('/bang.png');
  background-repeat: no-repeat;
  background-position: .75em .5em;
  background-size: 2em;

  box-shadow: inset .25em .5em .75em 0 rgba(0,0,0,0.1);
  color: #fff;
  padding-left: 3.5em;
}

.pyresult-error::before {
  content: '';
}

.pyresult-loading {
  opacity: 1;
}

.pyresult-loading-with-message {
  opacity: 1;
  position: relative;
}

.pyresult-loading-with-message::after {
  content: " ";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}

.active-code-cell {
  box-shadow: 0 0 .5em hsla(218, 70%, 39%, 0.86);
}

div.editor { /* !!! this is necessary specificity */
  display: none;
  position: absolute;
  z-index: 2;
}

div.ace_editor {
  box-sizing: border-box;
  font-size: .82em; /* slightly reduced font size relative to codecell becuase of font differences */
  margin: 0;
}

.ace-github .ace_gutter {
  background: #D6F717 !important;
}

div.ace_scroller {
  border: .1em solid #ddd;
  border-radius: .15em;
  /*padding: .8em .85em 1em .8em;*/ /* overflow gets in the way if we include padding D: */ ;
}

div.ace_content {
  /*padding: .8em .85em 1em .8em*/
}

div.ace_error-marker {
  background-color: #FC212C;
}

.sample-notebook-forkable {
  display: inline-block;
  margin-left: .4em;
}

.menu {
  background: #fff;
  border-radius: 3px;
  cursor: pointer;
  left: 1.3em;
  padding: .8em;
  position: absolute;
  top: 1.3em;

  img { // i.e., hamburger
    height: 1.33em;
    opacity: 0.5;
    width: 1.33em;
  }
}

.menu.active {
  border: solid 2px #A8A8A8;
  border-bottom: solid 2px #fff;
}

.menu-content {
  background: #fdfdfd;
  border: solid 2px #A8A8A8;
  font-weight: $bold;
  list-style-type: none;
  left: -1px;
  min-width: 18em;
  opacity: 0;
  margin-top: 2.13em;
  padding: 1em 1.3em 1.1em;
  position: absolute;
  visibility: hidden;

  transform: translateZ(0) translateY(-10%);
  transition: all 0.5s;
}

.active .menu-content {
  opacity: 1;
  transform: translateX(0%);
  visibility: visible;

  &::after {
    background: #fff;
    content: " ";
    left: 0;
    position: absolute;
    top: -2px;
    height: 3px;
    width: 2.9em;
  }
}

.menu-content-header {
  border-bottom: solid 1px #A8A8A8;
  color: #888;
  font-size: 130%;
  letter-spacing: .02em;
  margin-bottom: .5em;
  padding-bottom: .4em;
}

.menu-content-item {
  padding: .5em .3em .6em .4em;

  &:hover,
  &:hover a {
    background: $blue;
    border-radius: .25em;
    color: #fff;

    transition: all .15s ease-in-out;
  }

  a {
    color: $black;
    text-decoration: none;

    &:hover {
      text-decoration: none;
    }
  }
}

.sub-menu-content {
  list-style: none;
  margin:0;
  padding:0;
}

.menu-content-item {
  &:hover {
    .sub-menu-content-item {
      &::before {
        color: #fff;
      }
    }
  }
}

.sub-menu-content-item  {
  border: solid 1px transparent;
  border-radius: .3em;
  opacity: .86;
  padding: .4em .2em .5em 1.5em;
  text-indent: -.4em;

  &::before {
    content: "•";
    color: $black;
    padding-right: .4em;
  }

  &:first-of-type {
    margin-top: .3em;    
  }

  &:hover {
    border: solid 1px white;
    opacity: .98;
    &::before {
      color: #fff;
    }
  }
}

.collaborators {
  right: .5em;
  top: 0;
  position: fixed;
}

.collaborators ul {
  list-style-type: none;
  margin: 0;
  overflow: visible;
  padding: 0;
}

.collaborators li {
  float: left;
  margin: 0 .25em 0 0;
  padding: .4em .5em .65em .5em;
  position: relative;
}

.collaborators li:first-of-type {
  margin-top: 0;
}

.collaborators li span {
  color: #565656;
  display: block;
  font-size: .5em;
  font-weight: 700;
  text-align: center;
  width: 100%;
}

.collaborators li.observer {
  text-align: center;
}

.collaborators li.here {
  opacity: 1;
}

.collaborators li.arriving,
.collaborators li.departing {
  opacity: 0.3;
  animation-duration: 0.7s;
  animation-name: pulse;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

.collaborators-name-change-form-wrap {
  padding: 0;
  position: absolute;
  right: 0;
  max-height: 40em;
  opacity: 1;
  overflow: inherit; 
  top: 55px; /* magic number */

  transition: all .5s ease-out;
}

.collaborators-name-change-form-wrap-hidden {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: all .5s ease-in;
}

.collaborators-name-change-form {
  background: #ddd;
  border: solid .1em #ccc;
  border-radius: .25em;
  min-width: 12em;
  padding: .4em .5em .8em .5em;
  position: relative;
  z-index: 2;
}

.collaborators-name-change-form::after {
  background: #ddd;
  border-left: solid .1em #ccc;
  border-top: solid .1em #ccc;
  content: ' ';

  height: 12px;

  position: absolute;

  right: 1.83em;
  top: .1em;
  width: 12px;

  transform: rotate(45deg) translateY(-11.8px);
}

.collaborators-name-change-form p {
  font-size: .85em;
  margin: .3em;
}

.collaborators-name-change-form input {
  width: 72%;
}

.collaborators-name-change-form button {
  display: inline-block;
  margin-left: .5em;
  padding-left: .4em;
  width: 20%;
}

.observer:first-of-type {
  cursor: pointer;
}

.observer:not(:first-of-type) {
  opacity: .82;
}

div.ace_editor {
  border: none;
}

/* specificity necessary to override injected styles */
div.ace-github,
div.ace-content {
  background: #eee;
}

#upload {
  box-sizing: border-box;
  border: 6pt dashed #ccc;
  border-radius: 24pt;
  width: 300pt;
  min-height: 200pt;
  margin: 20pt auto;
  padding: 16pt;
  padding-left: 32pt;
  padding-top: 28pt;
  background: rgba(0,0,0,0.03);
  color: #888;
  font-size: 16pt;
  font-weight: bold;
}
#upload ul {
  padding-left: 16pt;
}
#upload h1 {
  font-size: 28pt;
  color: #aaa;
  border: 0;
}
#upload li {
  list-style-type: none;
  padding-left: 28pt;
  margin-bottom: 16pt;
}
#upload li.ipynb {
  background: url('file-ipynb.png') left center no-repeat;
  background-size: 15pt;
}
#upload li.csv {
  background: url('file-csv.png') left center no-repeat;
  background-size: 15pt;
}

#upload.hover {
  border: 6pt dashed #B1CD14;
}

.text-green {
  color: #B1CD14;
}

/* C3 STYLES - move to separate file */
/* side note: yargh we are in specificity hell */
.notebook .c3-tooltip-container th {
  background: $black;
}

.notebook-plot {
  background: white;
  margin: 0;
  margin-top: -1.05em; /* MAGICK NUMBER - used to obscure `null` return value */
}
.notebook-plot:empty {
  display: none;
}

/* editor extension shtuff */

.editor-wrapper {
  position: relative;
}

.selected-line {
  transition: background 100ms ease-in-out;
}

.selected-line::first-line {
  /*background: aliceblue;*/
}

.livebook-add-code-button {
  cursor: pointer;
  opacity: .6;
}

@media only screen and (min-width: 800px) {
  .app-container {
    padding-top: 4.2em;
  }

  .livebook-nav {
    box-shadow: none;
    height: 0;
  }

  .collaborators {
    position: absolute;
    right: -3.2em; /* needs to be width of avatar */
    top: 0;
    width: 3em;
  }

  .collaborators li {
    float: none;
    margin: 0;
    /*margin-top: 1em;*/
    padding: 0;
  }

  .collaborators li:first-of-type {
    /*margin-top: .75em;*/
  }

  .collaborators-name-change-form::after {
    height: 15px;
    right: 1.08em;
    top: 0;
    transform: rotate(45deg) translateY(-10.8px);
    width: 15px;
  }
}

@keyframes pulse {
  from {
    opacity: 0.3;
  }
  to {
    opacity: 0.7;
  }
}

